--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "dashboard",
+  "name": "@mfe/dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 8003",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "serve:standalone": "vue-cli-service serve --mode standalone"
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "single-spa-vue": "^2.1.0",
+    "systemjs-webpack-interop": "^2.3.7",
     "vue": "^3.2.13"
   },
   "devDependencies": {
@@ -18,7 +21,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "vue-cli-plugin-single-spa": "~3.3.0"
   },
   "eslintConfig": {
     "root": true,
